@@ -1,5 +1,9 @@
 2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Ghost_proto.wrl: 
+
+2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* OutlineEditor.wrl: 
 
 2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>
